--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@ description: About page
 
 <div class="mdl-grid">
   {% for service in site.about.services %}
-  <div class="mdl-cell mdl-cell--2-col-desktop mdl-cell--1-col-phone mdl-cell--2-col-tablet mdl-cell-1-col-offset-tablet mdl-typography--text-center">
+  <div class="mdl-cell mdl-cell--2-col-desktop mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-typography--text-center">
     <a href="{{ service.url }}">
       <span class="mdl-chip mdl-chip--contact">
                     <span class="mdl-chip__contact mdl-color--primary mdl-color-text--white">
@@ -59,74 +59,6 @@ description: About page
   </div>
   {% endfor %}
 </div>
-
-  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script type="text/javascript">
-    (function(){
-      emailjs.init("user_DDSmx6zNkyXW7LyH7EbGA");
-    })();
-
-    var sendMail = function() {
-      var name = document.getElementById('name_field').value;
-      var email = document.getElementById('email_field').value;
-      var notes = document.getElementById('notes_field').value;
-
-      var dialog = document.querySelector('dialog');
-      dialog.querySelector('.close').addEventListener('click', function() {
-        dialog.close();
-      });
-      if (! dialog.showModal) {
-        dialogPolyfill.registerDialog(dialog);
-      }
-
-      if (email.length > 0 && notes.length > 0) {
-        // Show with default spinner (in template)
-        dialog.showModal();
-        emailjs.send("gmail_acc","personal_site_connection",{name: name, email: email, notes: notes})
-        .then(function(response) {
-          // console.log("SUCCESS. status=%d, text=%s", response.status, response.text);
-          $('.mdl-dialog__title').text('Done');
-          $('.mdl-dialog__content').text('Email sent. Thank you!');
-        }, function(err) {
-          // console.log("FAILED. error=", err);
-          $('.mdl-dialog__title').text('Error :(');
-          $('.mdl-dialog__content').text('Please, try again later.');
-        });
-      }
-    };
-  </script>
-
-  <div class="mdl-card mdl-shadow--2dp max-width">
-    <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text">Get in touch</h2>
-    </div>
-    <div class="mdl-card__supporting-text mdl-card--border">
-      <div class="mdl-cell mdl-cell--12-col">
-        <div class="mdl-grid">
-          <!-- Send mail  -->
-          <div class="mdl-cell mdl-cell--6-col">
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label max-width">
-              <input class="mdl-textfield__input" type="text" id="email_field">
-              <label class="mdl-textfield__label" for="email_field">Email...</label>
-            </div>
-          </div>
-          <div class="mdl-cell mdl-cell--6-col">
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label max-width">
-              <input class="mdl-textfield__input" type="text" id="name_field">
-              <label class="mdl-textfield__label" for="name_field">Name...</label>
-            </div>
-          </div>
-          <div class="mdl-cell mdl-cell--12-col">
-            <div class="mdl-textfield mdl-js-textfield max-width">
-              <textarea class="mdl-textfield__input" type="text" rows= "2" id="notes_field" ></textarea>
-              <label class="mdl-textfield__label" for="notes_field">Notes...</label>
-            </div>
-          </div>
-          <button class="mdl-button" name="button" onclick="sendMail()">Send</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   {% include dialog.html %}
 </div>
