--- a/contact/index.html
+++ b/contact/index.html
@@ -4,9 +4,8 @@ title: Contact
 description: Contact page
 ---
 
-<p> 
-  Feel free to contact me through the following form or  <a href="mailto:matteo.comisso@me.com"> send me an email</a> . 
-</p>
+<!-- List of posts -->
+<div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop mdl-cell--4-col-phone">
 
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
@@ -75,3 +74,5 @@ description: Contact page
       }
     };
   </script>
+
+  </div>
