--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,11 @@ description: About page
 
 <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
   <div class="mdl-card mdl-shadow--2dp max-width">
+    <div class="mdl-card__title">
+      <span class="mdl-typhography--display-2">
+            Hello
+      </span>
+    </div>
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
         <div
@@ -13,11 +18,9 @@ description: About page
           class="mdl-cell mdl-cell--3-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
-          <p class="mdl-typhography--display-1">
-            Hello
-          </p>
+          
           <p class="mdl-typhography--body">
-            I am Matteo Comisso, a web and iOS developer located in Venice, Italy. <br/>
+            I'm a iOS developer in Venice, Italy. <br/>
           </p>
           <p>
             My current interests are Swift development and server side software architectures/management, but I constantly
@@ -46,6 +49,8 @@ description: About page
             </div>
             {% endfor %}
           </div>
+
+          Want to get in touch? <a href="/contact">Send me an email</a>
         </div>
       </div>
     </div>
