--- a/projects/blue-mate/Mate/index.html
+++ b/projects/blue-mate/Mate/index.html
@@ -118,7 +118,7 @@
 					<td style="width: 678px;">
 						<div style="display:inline-block;">
 							<img alt="beacon img" src="img/Beacons_grey.png"/>
-							<div style="display:block; margin-top:10%; width:100%;"><a style="background-color:black; padding:10px; margin:33%;" href="">ESPLORA</a></div>
+							<div style="display:block; margin-top:10%; width:100%;"><a style="background-color:black; padding:10px; margin:33%;" href="javascript:void(0);">ESPLORA</a></div>
 					<!-- Lightbox images -->
 						<div id="beaconsLightbox" style="display:none;">
 							<a href="img/POD_grey.png"></a>
@@ -148,7 +148,7 @@
 					<td style="width: 678px;">
 						<div style="display:inline-block;">
 						<img alt="PodIconGrey" src="img/POD_grey.png"/>
-						<div style="display:block; margin-top:10%; width:100%;"><a style="background-color:black; padding:10px; margin:33%;" href="">ESPLORA</a></div>
+						<div style="display:block; margin-top:10%; width:100%;"><a style="background-color:black; padding:10px; margin:33%;" href="javascript:void(0);">ESPLORA</a></div>
 					</div>
 					<!-- Lightbox images -->
 						<div id="podLight" style="display:none;">
@@ -216,7 +216,7 @@
 			      <!--Folder's ID must match Class of the item that it opens-->
 			      <div class="folder" id="fidelizzazione" style="display:inline-block; width:33%;">
 			        <!--Anything wrapped by this link can open the content on click.-->
-					<a href="#">
+					<a href="javascript:void(0);">
 						<div style="display:inline-block; margin:0 auto;">
 						 	<img src="img/Fidelizzazione.png"/>
 						 	<p style="width:inherit; margin:0 auto;" class="dark">FIDELIZZAZIONE CLIENTI</p>
@@ -225,7 +225,7 @@
 			      </div><!--End Folder-->
 			      
 			      <div class="folder" id="mercato" style="display:inline-block; width:33%;">
-					<a href="#">
+					<a href="javascript:void(0);">
 						<div style="display:inline-block; margin: 0 auto;">
 							<img src="img/Statistiche.png"/>
 						 	<p style="width:inherit; margin:0 auto;" class="dark">INDAGINI DI MERCATO</p>
@@ -234,7 +234,7 @@
 			      </div>
 
 			      <div class="folder" id="navigazione" style="display:inline-block; width:33%;">
-			      	<a href="#">
+			      	<a href="javascript:void(0);">
 						 <div style="display:inline-block; margin: 0 auto;">
 						 	<img src="img/Nav.png"/>
 						 	<p style="width:inherit; margin:0 auto;" class="dark">NAVIGAZIONE</p>
