--- a/projects/kiwi/elements.html
+++ b/projects/kiwi/elements.html
@@ -35,24 +35,24 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="">Layouts</a>
+							<a href="javascript:void(0);">Layouts</a>
 							<ul>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 								<li>
-									<a href="">Submenu</a>
+									<a href="javascript:void(0);">Submenu</a>
 									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
+										<li><a href="javascript:void(0);">Option 1</a></li>
+										<li><a href="javascript:void(0);">Option 2</a></li>
+										<li><a href="javascript:void(0);">Option 3</a></li>
+										<li><a href="javascript:void(0);">Option 4</a></li>
 									</ul>
 								</li>
 							</ul>
 						</li>
 						<li><a href="elements.html">Elements</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="javascript:void(0);" class="button special">Sign Up</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -70,7 +70,7 @@
 							<h3>Text</h3>
 							<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
 							This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-							This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+							This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="javascript:void(0);">this is a link</a>.</p>
 
 							<hr />
 
@@ -148,20 +148,20 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+										<li><a href="javascript:void(0);" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="javascript:void(0);" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="javascript:void(0);" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="javascript:void(0);" class="icon fa-github"><span class="label">Github</span></a></li>
+										<li><a href="javascript:void(0);" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="javascript:void(0);" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 									</ul>
 									<ul class="icons">
-										<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon alt fa-github"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon alt fa-tumblr"><span class="label">Tumblr</span></a></li>
+										<li><a href="javascript:void(0);" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="javascript:void(0);" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="javascript:void(0);" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="javascript:void(0);" class="icon alt fa-github"><span class="label">Github</span></a></li>
+										<li><a href="javascript:void(0);" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="javascript:void(0);" class="icon alt fa-tumblr"><span class="label">Tumblr</span></a></li>
 									</ul>
 
 								</div>
@@ -169,36 +169,36 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 							<h4>Actions</h4>
 							<ul class="actions">
-								<li><a href="#" class="button special">Default</a></li>
-								<li><a href="#" class="button">Default</a></li>
+								<li><a href="javascript:void(0);" class="button special">Default</a></li>
+								<li><a href="javascript:void(0);" class="button">Default</a></li>
 							</ul>
 							<ul class="actions small">
-								<li><a href="#" class="button special small">Small</a></li>
-								<li><a href="#" class="button small">Small</a></li>
+								<li><a href="javascript:void(0);" class="button special small">Small</a></li>
+								<li><a href="javascript:void(0);" class="button small">Small</a></li>
 							</ul>
 							<div class="row">
 								<div class="3u 6u(2) 12u$(3)">
 									<ul class="actions vertical">
-										<li><a href="#" class="button special">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
+										<li><a href="javascript:void(0);" class="button special">Default</a></li>
+										<li><a href="javascript:void(0);" class="button">Default</a></li>
 									</ul>
 								</div>
 								<div class="3u 6u$(2) 12u$(3)">
 									<ul class="actions vertical small">
-										<li><a href="#" class="button special small">Small</a></li>
-										<li><a href="#" class="button small">Small</a></li>
+										<li><a href="javascript:void(0);" class="button special small">Small</a></li>
+										<li><a href="javascript:void(0);" class="button small">Small</a></li>
 									</ul>
 								</div>
 								<div class="3u 6u(2) 12u$(3)">
 									<ul class="actions vertical">
-										<li><a href="#" class="button special fit">Default</a></li>
-										<li><a href="#" class="button fit">Default</a></li>
+										<li><a href="javascript:void(0);" class="button special fit">Default</a></li>
+										<li><a href="javascript:void(0);" class="button fit">Default</a></li>
 									</ul>
 								</div>
 								<div class="3u$ 6u$(2) 12u$(3)">
 									<ul class="actions vertical small">
-										<li><a href="#" class="button special small fit">Small</a></li>
-										<li><a href="#" class="button small fit">Small</a></li>
+										<li><a href="javascript:void(0);" class="button special small fit">Small</a></li>
+										<li><a href="javascript:void(0);" class="button small fit">Small</a></li>
 									</ul>
 								</div>
 							</div>
@@ -303,31 +303,31 @@ print 'It took ' + i + ' iterations to sort the deck.';
 						<section>
 							<h3>Buttons</h3>
 							<ul class="actions">
-								<li><a href="#" class="button special">Special</a></li>
-								<li><a href="#" class="button">Default</a></li>
+								<li><a href="javascript:void(0);" class="button special">Special</a></li>
+								<li><a href="javascript:void(0);" class="button">Default</a></li>
 							</ul>
 							<ul class="actions">
-								<li><a href="#" class="button special big">Big</a></li>
-								<li><a href="#" class="button">Default</a></li>
-								<li><a href="#" class="button small">Default</a></li>
+								<li><a href="javascript:void(0);" class="button special big">Big</a></li>
+								<li><a href="javascript:void(0);" class="button">Default</a></li>
+								<li><a href="javascript:void(0);" class="button small">Default</a></li>
 							</ul>
 							<div class="row">
 								<div class="6u 12u$(3)">
 									<ul class="actions fit">
-										<li><a href="#" class="button special fit">Fit</a></li>
-										<li><a href="#" class="button fit">Fit</a></li>
+										<li><a href="javascript:void(0);" class="button special fit">Fit</a></li>
+										<li><a href="javascript:void(0);" class="button fit">Fit</a></li>
 									</ul>
 								</div>
 								<div class="6u$ 12u$(3)">
 									<ul class="actions fit small">
-										<li><a href="#" class="button special fit small">Fit + Small</a></li>
-										<li><a href="#" class="button fit small">Fit + Small</a></li>
+										<li><a href="javascript:void(0);" class="button special fit small">Fit + Small</a></li>
+										<li><a href="javascript:void(0);" class="button fit small">Fit + Small</a></li>
 									</ul>
 								</div>
 							</div>
 							<ul class="actions">
-								<li><a href="#" class="button special icon fa-download">Icon</a></li>
-								<li><a href="#" class="button icon fa-download">Icon</a></li>
+								<li><a href="javascript:void(0);" class="button special icon fa-download">Icon</a></li>
+								<li><a href="javascript:void(0);" class="button icon fa-download">Icon</a></li>
 							</ul>
 							<ul class="actions">
 								<li><span class="button special disabled">Special</span></li>
@@ -423,12 +423,12 @@ print 'It took ' + i + ' iterations to sort the deck.';
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
