--- a/projects/kiwi/index.html
+++ b/projects/kiwi/index.html
@@ -44,7 +44,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="">Layouts</a>
+							<a href="javascript:void(0);">Layouts</a>
 							<ul>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
@@ -107,7 +107,7 @@
 					</header>
 					<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 					<ul class="actions">
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="javascript:void(0);" class="button">Learn More</a></li>
 					</ul>
 				</div>
 				<a href="#three" class="goto-next scrolly">Next</a>
@@ -124,7 +124,7 @@
 						<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
 					</header>
 					<ul class="actions">
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="javascript:void(0);" class="button">Learn More</a></li>
 					</ul>
 				</div>
 				<a href="#four" class="goto-next scrolly">Next</a>
@@ -203,12 +203,12 @@
 			<footer id="footer">
 <!--
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 -->
 				<ul class="copyright">
