--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
----
-layout: default
-title: About
-description: About page
+--- 
+layout: default 
+title: About 
+description: About page 
 ---
 
 <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
@@ -13,23 +13,20 @@ description: About page
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
       <div class="mdl-grid">
-        <div
-          style='background: url("https://twitter.com/{{ site.about.services[1].username | remove: '@' }}/profile_image?size=original") center / cover;' 
-          class="mdl-cell mdl-cell--3-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+        <div style='background: url("https://twitter.com/{{ site.about.services[1].username | remove: ' @
+          ' }}/profile_image?size=original") center / cover;' class="mdl-cell mdl-cell--3-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
-          
+
           <p class="mdl-typhography--body">
             I'm a iOS developer in Venice, Italy. <br/>
           </p>
           <p>
-            My current interests are Swift development and server side software architectures/management, but I constantly
-            stay updated with the latest technologies, trying them myself as soon as possible.<br/>
+            My current interests are Swift development and server side software architectures/management, but I constantly stay updated
+            with the latest technologies, trying them myself as soon as possible.<br/>
           </p>
           <p>
-            Recently I posted something about:
-            {% assign post = site.posts | first %}
-            {% assign slug = post.title | slugify %}
+            Recently I posted something about: {% assign post = site.posts | first %} {% assign slug = post.title | slugify %}
             <a id="{{ slug }}" href="{{ post.url }}">{{ post.tags | sort | array_to_sentence_string }}</a>
             <div class="mdl-tooltip" for="{{ slug }}">
               {{ post.title }}
@@ -40,7 +37,7 @@ description: About page
             {% for app in site.data.works %}
             <div class="mdl-cell mdl-cell--2-col-desktop mdl-cell--2-col-tablet mdl-cell--2-col-phone">
               <a href="{{ app.url }}">
-                <img src="{{ site.url }}{{ app.icon }}" alt="{{ app.name }} icon" style="width: 100%; border-radius: 15.625%;"/>
+                <img src="{{ site.url }}{{ app.icon }}" alt="{{ app.name }} icon" style="width: 100%; border-radius: 15.625%;" />
               </a>
               <p id="id{{app.name}}" style="text-align: center;">{{app.name}}</p>
               <div class="mdl-tooltip" for="id{{ app.name }}">
@@ -56,23 +53,21 @@ description: About page
     </div>
   </div>
 
-<div class="mdl-grid">
-  {% for service in site.about.services %}
-  <div class="mdl-cell mdl-cell--2-col-desktop mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-typography--text-center">
-    <a href="{{ service.url }}">
-      <span class="mdl-chip mdl-chip--contact">
-                    <span class="mdl-chip__contact mdl-color--primary mdl-color-text--white">
-                      <i id="{{ service.name | slugify }}" class="fa fa-{{ service.name }}"></i>
-                    </span>
-      <span class="mdl-chip__text">{{ service.name }}</span>
-      </span>
-    </a>
-    <div class="mdl-tooltip" for="{{ service.name | slugify }}">
-      {{ service.username }}
+  <div class="mdl-grid">
+    {% for service in site.about.services %}
+    <div class="mdl-cell mdl-cell--2-col-desktop mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-typography--text-center">
+      <a href="{{ service.url }}">
+        <span class="mdl-chip mdl-chip--contact">
+          <span class="mdl-chip__contact mdl-color--primary mdl-color-text--white">
+            <i id="{{ service.name | slugify }}" class="fa fa-{{ service.name }}"></i>
+          </span>
+          <span class="mdl-chip__text">{{ service.name }}</span>
+        </span>
+      </a>
+      <div class="mdl-tooltip" for="{{ service.name | slugify }}">
+        {{ service.username }}
+      </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
-</div>
-
-  {% include dialog.html %}
 </div>
