--- a/projects/kiwi/left-sidebar.html
+++ b/projects/kiwi/left-sidebar.html
@@ -35,24 +35,24 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="">Layouts</a>
+							<a href="javascript:void(0);">Layouts</a>
 							<ul>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 								<li>
-									<a href="">Submenu</a>
+									<a href="javascript:void(0);">Submenu</a>
 									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
+										<li><a href="javascript:void(0);">Option 1</a></li>
+										<li><a href="javascript:void(0);">Option 2</a></li>
+										<li><a href="javascript:void(0);">Option 3</a></li>
+										<li><a href="javascript:void(0);">Option 4</a></li>
 									</ul>
 								</li>
 							</ul>
 						</li>
 						<li><a href="elements.html">Elements</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="javascript:void(0);" class="button special">Sign Up</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -74,18 +74,18 @@
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
 										<footer>
 											<ul class="actions">
-												<li><a href="#" class="button">Learn More</a></li>
+												<li><a href="javascript:void(0);" class="button">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
 									<hr />
 									<section>
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="javascript:void(0);" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<h3>Amet Lorem Tempus</h3>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 										<footer>
 											<ul class="actions">
-												<li><a href="#" class="button">Learn More</a></li>
+												<li><a href="javascript:void(0);" class="button">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
@@ -96,7 +96,7 @@
 
 							<!-- Content -->
 								<section id="content">
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="javascript:void(0);" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<h3>Dolore Amet Consequat</h3>
 									<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
 									<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
@@ -119,12 +119,12 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
