--- a/projects/kiwi/no-sidebar.html
+++ b/projects/kiwi/no-sidebar.html
@@ -35,24 +35,24 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="">Layouts</a>
+							<a href="javascript:void(0);">Layouts</a>
 							<ul>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 								<li>
-									<a href="">Submenu</a>
+									<a href="javascript:void(0);">Submenu</a>
 									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
+										<li><a href="javascript:void(0);">Option 1</a></li>
+										<li><a href="javascript:void(0);">Option 2</a></li>
+										<li><a href="javascript:void(0);">Option 3</a></li>
+										<li><a href="javascript:void(0);">Option 4</a></li>
 									</ul>
 								</li>
 							</ul>
 						</li>
 						<li><a href="elements.html">Elements</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="javascript:void(0);" class="button special">Sign Up</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -67,7 +67,7 @@
 
 					<!-- Content -->
 						<section id="content">
-							<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+							<a href="javascript:void(0);" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 							<h3>Dolore Amet Consequat</h3>
 							<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam cubilia adipiscing interdum aliquet aliquet placerat cubilia accumsan cep ante nullam adipiscing tortor odio. Iaculis adipiscing accumsan nascetur in cras. Lacinia placerat.</p>
 							<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique faucibus magna adipiscing aliquet blandit nisi dolor accumsan nascetur lorem. Vis enim. Curae. Mi arcu vis aliquam ipsum non accumsan ac mi faucibus amet eu accumsan erat interdum semper accumsan. Eu sagittis tellus accumsan neque lorem penatibus in porttitor. Vivamus commodo curae. Condimentum lobortis praesent id ac lorem. Lorem vis ipsum dolor feugiat consequat dolore adipiscing.</p>
@@ -88,12 +88,12 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="javascript:void(0);" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
