--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ description: About page
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
       <span class="mdl-typhography--display-2">
-            Hello
+            I'm a iOS developer in <a href="https://goo.gl/maps/hfj5gwZQPR72" target="_blank"> Trieste, Italy. </a>
       </span>
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
@@ -17,10 +17,6 @@ description: About page
           ' }}/profile_image?size=original") center / cover;' class="mdl-cell mdl-cell--3-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
-
-          <p class="mdl-typhography--body">
-            I'm a iOS developer in Venice, Italy. <br/>
-          </p>
           <p>
             My current interests are Swift development and server side software architectures/management, but I constantly stay updated
             with the latest technologies, trying them myself as soon as possible.<br/>
@@ -32,7 +28,7 @@ description: About page
               {{ post.title }}
             </div>
           </p>
-          I was involved in the making of these apps:
+          <span class="mdl-typography--subhead">I was involved in the making of these apps</span>
           <div class="mdl-grid">
             {% for app in site.data.works %}
             <div class="mdl-cell mdl-cell--2-col-desktop mdl-cell--2-col-tablet mdl-cell--2-col-phone">
@@ -46,8 +42,17 @@ description: About page
             </div>
             {% endfor %}
           </div>
+          <span class="mdl-typography--subhead">And I have a couple of open source repositories too</span>
+            <ul>
+            {% for proj in site.data.github %}
+              <li>            
+                  <span id="id{{ proj.name }}" style="text-align: center;"><a href="{{ proj.url }}">{{proj.name}}</a> - {{ proj.description }}</span>
+              </li>
+            {% endfor %}
+            </ul>
 
-          Want to get in touch? <a href="/contact">Send me an email</a>
+          <span class="mdl-typography--subhead">Want to get in touch? </span>
+          <p><a href="/contact">Send me an email</a> or use Intercom by pressing the bottom right button on this page.</p>
         </div>
       </div>
     </div>
@@ -64,9 +69,6 @@ description: About page
           <span class="mdl-chip__text">{{ service.name }}</span>
         </span>
       </a>
-      <div class="mdl-tooltip" for="{{ service.name | slugify }}">
-        {{ service.username }}
-      </div>
     </div>
     {% endfor %}
   </div>
