Relocated to London

--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ description: About page
   <div class="mdl-card mdl-shadow--2dp max-width">
     <div class="mdl-card__title">
       <span class="mdl-typhography--display-2">
-            I'm a iOS developer in <a href="https://goo.gl/maps/hfj5gwZQPR72" target="_blank"> Trieste, Italy. </a>
+            I'm a iOS developer in <a href="https://goo.gl/maps/qSTGhQfBvbS2" target="_blank"> London. </a>
       </span>
     </div>
     <div class="mdl-card__supporting-text mdl-card--border">
