--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@ description: About page
         </div>
         <div class="mdl-cell mdl-cell--9-col mdl-cell--4-col-phone">
           <p>
-            My current interests are Swift development and server side software architectures/management, but I constantly stay updated
+            My current interests are Swift development and AR applications, but I constantly stay updated
             with the latest technologies, trying them myself as soon as possible.<br/>
           </p>
           <p>
